<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_15sp" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_15sp" />

            <Button
                android:id="@+id/loginBTN"
                style="?android:actionBarTabBarStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/button_bg"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/forgotTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/poweredBy"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:text="@string/note_login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sp" />

        <TextView
            android:id="@+id/poweredBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/powered_by"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sp" />

    </RelativeLayout>

</ScrollView>